<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Sopa_de_Letras">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="680dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="495dp"
            android:contentDescription="@string/descripcion_imagen_juega"
            app:srcCompat="@drawable/image_11" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="115dp"
                    android:layout_height="120dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/boton_menu"
                    android:onClick="IrMenu"
                    android:padding="20dp"
                    app:srcCompat="@drawable/image_12" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/gridView_spl"
        android:layout_width="304dp"
        android:layout_height="283dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="185dp"
        android:layout_height="198dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_palabras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/image_13" />

</androidx.constraintlayout.widget.ConstraintLayout>